--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Filippo Pota
 logo: 
-description: Bla bla bla
+description: "I am a PhD candidate in Chemistry with a passion for research and a growing interest in data science and analytics."
 show downloads: true
 theme: jekyll-theme-minimal
